; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_help.c_add_man_viewer_path.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_help.c_add_man_viewer_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [87 x i8] c"'%s': path for unsupported man viewer.\0APlease consider using 'man.<tool>.cmd' instead.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*)* @add_man_viewer_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_man_viewer_path(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @supported_man_viewer(i8* %7, i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i8*, i8** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @do_add_man_viewer_info(i8* %12, i64 %13, i8* %14)
  br label %20

16:                                               ; preds = %3
  %17 = call i32 @_(i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str, i64 0, i64 0))
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @warning(i32 %17, i8* %18)
  br label %20

20:                                               ; preds = %16, %11
  ret i32 0
}

declare dso_local i64 @supported_man_viewer(i8*, i64) #1

declare dso_local i32 @do_add_man_viewer_info(i8*, i64, i8*) #1

declare dso_local i32 @warning(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
